# easy_ffmpeg

./: build.gradle  gradlew  gradlew.bat
app/: build.gradle
app/src/androidTest/java/com/wyl/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/asset/: EGL使用流程.puml  native-lib.cpp  opengl使用流程.puml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioSwr.cpp  AudioSwr.h  Clock.cpp  Clock.h  FormatCxt.cpp  FormatCxt.h  FrameInfo.cpp  FrameInfo.h  MediaPlayer.cpp  MediaPlayer.h  MediaProvider.cpp  MediaProvider.h  OnFrameCallBack.cpp  OnFrameCallBack.h  OtherBgPlayer.cpp  OtherBgPlayer.h  PacketInfo.cpp  PacketInfo.h  PcmInfo.cpp  PcmInfo.h  PcmProvider.cpp  PcmProvider.h  RenderAudio.cpp  RenderAudio.h  RmAudio.cpp  RmAudio.h  ThreadTest.cpp  ThreadTest.h  ThumbnailUtil.cpp  ThumbnailUtil.h  VideoDecoder.cpp  VideoDecoder.h  VideoSws.cpp  VideoSws.h
app/src/main/cpp/constant/: constant.cpp  constant.h
app/src/main/cpp/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/image/: image.cpp  image.h
app/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  mediacodec.h  packet.h  vaapi.h  vdpau.h  videotoolbox.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: channel_layout.h  common.h  ffversion.h  frame.h  opt.h  pixdesc.h  stereo3d.h  video_enc_params.h
app/src/main/cpp/log/: log.cpp  log.h
app/src/main/cpp/opengl/: GLRender.cpp  GLRender.h
app/src/main/cpp/player/: Egl.cpp  Egl.h  Ogl.cpp  Ogl.h  player.cpp  player.h
app/src/main/cpp/utils/: FrameUtil.cpp  FrameUtil.h  StringUtil.cpp  StringUtil.h
app/src/main/cpp/video/: encoder.cpp  encoder.h  reverse.cpp  reverse.h  video.cpp  video.h
app/src/main/java/com/wyl/ffmpegtest/: MainActivity.java
app/src/main/java/com/wyl/ffmpegtest/permission/: PermissionListener.java  PermissionRequestUtil.java  RequestFragment.java  RequestWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/wyl/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
